tests/snapshots/integration__integration_tests__directives__finish_internal_directive.snap
---
source: tests/integration_tests/directives.rs
info:
  program: wt
  args:
    - finish
    - "--internal"
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
__WORKTRUNK_CD__[PATH]
Finished worktree and returned to primary

----- stderr -----
