tests/snapshots/integration__integration_tests__directives__switch_internal_directive.snap
---
source: tests/integration_tests/directives.rs
info:
  program: wt
  args:
    - switch
    - my-feature
    - "--internal"
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
__WORKTRUNK_CD__[PATH]
Switched to worktree: my-feature

----- stderr -----
